2004-11-01  JP Rosevear  <jpr@novell.com>

	* storage/Makefile.am (DISTCLEANFILES): dist clean the server file

	* Makefile.am: add intltool-* to distclean files

2004-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-factory.c (_todos_new_backend) :
	Changed the object type from ECalBackendExchange to 
	ECalBackendExchangeTask
	(_events_new_backend) : Similarly changed to ECalBackendExchangeCalendar

2004-10-18  Sarfraaz Ahmed <asarfraaz@novell.com>

	* lib/Makefile.am: Reorder the LDAP_LIBS
	* storage/Makefile.am: Similar
	* docs/debug : Added an example for gctest

2004-10-18  Sushma Rai  <rsushma@novell.com>

	* configure.in: version 2.1.0

2004-10-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel/camel-exchange-provider.c: (camel_provider_module_init):
	Initialize codeset here too.

2004-10-13  Sarfraaz Ahmed <asarfraaz@novell.com>

	* lib/e2k-propnames.h.in : Added a new mapi proptag for folder size.
	* storage/e-folder-exchange.c (e_folder_exchange_get_folder_size)
	(e_folder_exchange_set_folder_size): Implemented
	(e_folder_exchange_save_to_file) (e_folder_exchange_new_from_file):
	Now take care of the folder size as well
	* storage/e-folder-exchange.h: Similar
	* storage/exchange-account.c (exchange_account_connect): Check
	for quota information.
	* storage/exchange-hierarchy-webdav.c (hierarchy_new_folder) (add_href)
	: Add check for some warnings.
	(exchange_hierarchy_webdav_parse_folder): Set the folder size for the
	folder
	* storage/xc-commands.c (do_folder_size): Implementated
	* storage/ximian-connector.xml: Added the verb for folder size

2004-10-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/main.c: (main):
	* storage/ximian-connector-setup.c: (main):
        Initialize codeset for textdomain. Patch by Frederic Crozat.

2004-10-08  Sarfraaz Ahmed <asarfraaz@novell.com>

        * calendar/e-cal-backend-exchange-calendar.c (book_resource): Make